Applied Cactus coding style
git-svn-id: http://svn.apache.org/repos/asf/jakarta/cactus/trunk@238618 13f79535-47bb-0310-9956-ffa450edef68