@@ -1,9 +1,9 @@
-package org.apache.maven.cactus.sample;
-
-/* ====================================================================
+/*
+ * ====================================================================
+ *
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2002-2003 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -18,21 +18,21 @@ package org.apache.maven.cactus.sample;
  *    the documentation and/or other materials provided with the
  *    distribution.
  *
- * 3. The end-user documentation included with the redistribution,
- *    if any, must include the following acknowledgment:
+ * 3. The end-user documentation included with the redistribution, if
+ *    any, must include the following acknowlegement:
  *       "This product includes software developed by the
  *        Apache Software Foundation (http://www.apache.org/)."
- *    Alternately, this acknowledgment may appear in the software itself,
- *    if and wherever such third-party acknowledgments normally appear.
+ *    Alternately, this acknowlegement may appear in the software itself,
+ *    if and wherever such third-party acknowlegements normally appear.
  *
- * 4. The names "Apache" and "Apache Software Foundation" and
- *    "Apache Maven" must not be used to endorse or promote products
+ * 4. The names "The Jakarta Project", "Cactus" and "Apache Software
+ *    Foundation" must not be used to endorse or promote products
  *    derived from this software without prior written permission. For
  *    written permission, please contact apache@apache.org.
  *
- * 5. Products derived from this software may not be called "Apache",
- *    "Apache Maven", nor may "Apache" appear in their name, without
- *    prior written permission of the Apache Software Foundation.
+ * 5. Products derived from this software may not be called "Apache"
+ *    nor may "Apache" appear in their names without prior written
+ *    permission of the Apache Group.
  *
  * THIS SOFTWARE IS PROVIDED ``AS IS'' AND ANY EXPRESSED OR IMPLIED
  * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
@@ -53,8 +53,8 @@ package org.apache.maven.cactus.sample;
  * information on the Apache Software Foundation, please see
  * <http://www.apache.org/>.
  *
- * ====================================================================
  */
+package org.apache.maven.cactus.sample;
 
 import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
@@ -70,27 +70,28 @@ import javax.servlet.http.HttpSession;
  *
  * @version $Id$
  */
-
-public class SampleServlet extends HttpServlet {
-
+public class SampleServlet extends HttpServlet
+{
     /**
      *Take a request object and return whether the user is authenticated o not.
      *
-     * @param request the HttpServletRequest object
+     * @param theRequest the HttpServletRequest object
      *
      * @return boolean whether the request is by an authenticated user or not
      *
      */
-    public boolean isAuthenticated(HttpServletRequest request) {
-        HttpSession session = request.getSession(false);
+    public boolean isAuthenticated(HttpServletRequest theRequest)
+    {
+        HttpSession session = theRequest.getSession(false);
 
-        if (session == null) {
+        if (session == null)
+        {
             return false;
         }
 
         String authenticationAttribute =
             (String) session.getAttribute("authenticated");
 
-        return new Boolean(authenticationAttribute).booleanValue();
+        return Boolean.valueOf(authenticationAttribute);
     }
 }
